myproject/inkle/static/css/main.css
*
{
    margin: 0px;
    padding: 0px;
    font-family: helvetica;
}

a
{
    outline: none;
}

input, textarea
{
    color: #1B5898;
    font-size: 13px;
}

*::-moz-focus-inner
{
    border: none;
}

/*body
{
    background-image: url(/static/media/images/main/gradient.png);
    background-repeat: repeat-y;
    background-size: 100%;
    width: 100%;
    height: 100%;
}*/

#mainContent
{
    margin-top: 100px;
}

.pageTitle
{
    font-size: 36px;
    margin: -8px 0px 10px 0px;
    font-weight: bold;
    color: #288D42;
    float: left;
    width: 100%;
    word-wrap:break-word;
}

.contentLinks p
{
    color: #ABC2E5;
    font-size: 26px;
    font-weight: bold;
    cursor: pointer;
    float: left;
    margin: -3px 25px 15px 0px;
}

.contentLinks .selectedContentLink
{
    color: #1B5898;
}

.subsectionContentLinks p
{
    color: #EAB0B5;
    font-size: 20px;
    font-weight: bold;
    cursor: pointer;
    float: left;
    margin: 0px 30px 15px 0px;
}

.subsectionContentLinks .selectedSubsectionContentLink
{
    color: #CD1A26;
}

.subsectionTitle
{
    font-size: 26px;
    font-weight: bold;
    color: #288D42;
}

.subheader
{
    font-weight: bold;
    font-size: 18px;
    margin-top: 3px;
    color: #288D42;
}

#footer
{
    background-color: #6ABB6A;
    background-color: #288D42;
    height: 30px;
    width: 100%;
    text-align: center;
    bottom: 0px;
    position: fixed;
    z-index: 1;
}

#footerLinks, #footerLinks a
{
    color: #FFFFFF;
    margin-top: 5px;
    padding: 2px;
    font-size: 14px;
    text-decoration: none;
}

#inviteYourFriendsButton
{
    cursor: pointer;
    width: 70%;
    margin-top: 5px;
    float: right;
    font-weight: bold;
    color: #FFF;
}

#inviteYourFriendsContent
{
    display: none;
    z-index: 2;
    position: absolute;
    background-color: #EEE;
    border-radius: 3px 0px 3px 3px;
    border: solid 2px #AAA;
    padding: 5px;
    text-align: center;
}

#inviteToInkleSendButton
{
    background-color: #1B5898;
    border-color: #2A4360;
    margin-top: 5px;
}

#inviteToInkleSendButton:hover
{
    border-color: #002C45;
}

#inviteYourFriendsContent textarea
{
    width: 225px;
    height: 90px;
    resize: none;
    border: solid 2px #BBB;
    padding: 3px;
}

.emptyTextarea
{
    color: #888;
}

#footer a:hover, #inviteYourFriendsButton:hover, .selectedInviteYourFriendsButton
{
    background-color: #ABD4B0;
}

.memberCard, .locationCard, .sphereCard, .invitationCard
{
    border: 2px solid #777;
    background-color: #CCC;
    border-radius: 5px;
    margin-bottom: 10px;
}

.memberCard img, .locationCard img, .sphereCard img, .invitationCard img
{
    border: 1px solid #444;
    height: 100px;
    width: 100px;
    float: left;
    margin: 5px 10px 5px 5px;
}

.cardName
{
    color: #1B5898;
    font-family: helvetica;
    font-size: 28px;
    font-weight: bold;
    text-decoration: none;
    float: left;
}

.button
{
    padding: 2px 5px 2px 5px;
    margin: 10px 0px 0px 9px;
    color: #FFF;
    border-style: solid;
    font-weight: bold;
    border-radius: 5px;
    outline: none;
    cursor: pointer;
}

.cardButton
{
    padding: 2px 5px 2px 5px;
    margin-left: 10px;
    color: #FFF;
    border-style: solid;
    font-weight: bold;
    float: right;
    border-radius: 5px;
    outline: none;
    cursor: pointer;
}

.infoRow
{
    float: left;
    clear: right;
    width: 100%;
    overflow: hidden;
}

.memberMessage, .sphereMessage
{
    display: none;
    padding: 5px;
    border: 2px solid #444;
    background-color: #BBB;
    border-radius: 5px;
    margin-bottom: 15px;
    text-decoration: none;
}

.memberCard .info, .locationCard .info, .sphereCard .info, .invitationCard .info
{
    float: left;
    width: 542px;
    margin-bottom: 5px;
}

.memberCard .contactInfo, .locationCard .contactInfo
{
    float: right;
    font-size: 12px;
    text-align: right;
    margin-top: 2px;
    font-weight: bold;
}

